# ANPR-Server-C-

./: .gitignore  ANPR.sln  CMakeLists.txt  README.md
ANPR/: ANPR.vcxproj  ANPR.vcxproj.filters  Controller.cpp  Controller.h  ImageBuffer.cpp  ImageBuffer.h  LPCascade.cpp  LPCascade.h  LPDetection.cpp  LPDetection.h  Model.cpp  Model.h  ProcessingThread.cpp  ProcessingThread.h  Semaphore.h  Server.cpp  Server.h  VariableManager.cpp  VariableManager.h  View.cpp  View.h  main.cpp  signal.cpp
x64/Debug/: characterNet.prototxt  labels.txt
x64/Release/: ANPR.ipdb  config.yml
